--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -290,3 +290,9 @@
 <script src="javascripts/contract.js"></script>
 <script src="javascripts/grids.js"></script>
 <script src="javascripts/AppSkeleton.js"></script>
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'EEGalaxy/Lobby'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
