--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -230,10 +230,10 @@
 
                         <div id="sell-grid" class="form-group">
                             <div class="input-group">
-                                <span class="input-group-addon">{{t "sell grid"}}</span>
+                                <!-- <span class="input-group-addon">{{t "sell grid"}}</span>-->
                                 <input type="number" name="grid-sell-price" placeholder='{{t "enter sell price"}}' class="form-control">
-                                <span id="sell-grid-btn" class="input-group-addon">ETH
-                                    <span class="glyphicon glyphicon-ok"></span>
+                                <span id="sell-grid-btn" class="input-group-addon btn-primary">
+                                    {{t "sell grid"}}
                                 </span>
                             </div>
                         </div>
@@ -274,6 +274,7 @@
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<script src="/bower/remarkable-bootstrap-notify/bootstrap-notify.min.js"></script>
 <script type="text/javascript">
     window.CESIUM_BASE_URL = '/cesium';
     window.LOCALE = '{{ l }}' || 'cn';
