--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -266,7 +266,8 @@
 </script>
 
 <!-- distinguish test and pro env -->
-<script src="/cesium/Cesium.js"></script>
+<!-- <script src="/cesium/Cesium.js"></script> -->x
+<script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script>
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
 
 <script src="javascripts/stars.js"></script>
