--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -221,6 +221,9 @@
           </div>
         </div>
 
+        <div class="panel-body">
+          <button class="btn btn-primary" id="sign">Sign Test</button>
+        </div>
       </div>
     </div>
   </div>
@@ -254,6 +257,7 @@
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
 <!-- end distinguish test and pro env if cesium -->
 
+<script src="javascripts/validation.js"></script>
 <script src="javascripts/stars.js"></script>
 <script src="javascripts/Earth.js"></script>
 <script src="javascripts/contract.js"></script>
