fix template bug

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -243,7 +243,7 @@
         <div class="panel-body">
           <button class="btn btn-primary" id="sign">Sign Test</button>
         </div>
-        -->x
+        -->
       </div>
     </div>
   </div>
@@ -271,9 +271,9 @@
 <script type="text/javascript">
 </script>
 
-<!-- distinguish test and pro env -->
-<!-- <script src="/cesium/Cesium.js"></script> -->x
-<script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script>
+<!-- distinguish test and pro env if cesium -->
+<script src="/cesium/Cesium.js"></script>
+<!-- <script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
 <!-- end distinguish test and pro env if cesium -->
 
