split template by handlebars engine

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,258 +18,13 @@
 
 <canvas id="canvas"></canvas>
 
-<nav class="navbar navbar-galaxy" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#">
-        <!-- #FFCC00 -->
-        <img src="/images/logo.png">
-      </a>
-    </div>
-    <div class="pull-right">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <span id="network"></span>
-            <b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a id="contract" target="_blank" href="#">{{t "contract"}}</a></li>
-          </ul>
-        </li>
-
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            {{t "language"}}
-            <b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a id="set-lan-en" href="">English</a></li>
-            <li><a id="set-lan-ch" href="">中文</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+{{> navbar}}
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
-      <div class="panel panel-default panel-transparent">
-        <div class="panel-heading">
-          <span>
-            {{t "status"}}
-          </span>
-          <div class="pull-right">
-            <a id="status-refresh" class="button button-tiny button-circle"><i class="fa fa-refresh"></i></a>
-          </div>
-        </div>
-
-        <div class="panel-body">
-          <!--
-            <div>
-              <label>{{t "contract"}}</label>
-              <span id="status-contract"></span>
-            </div>
-          -->
-          <div>
-            <label>{{t "grids count"}}</label>
-            <span id="status-total-grids"></span>
-          </div>
-          <div>
-            <label>{{t "sold"}}</label>
-            <span id="status-sold-grids"></span>
-          </div>
-          <div>
-            <label>{{t "fee"}}</label>
-            <span id="status-tran-fee"></span>
-          </div>
-          <div>
-            <label>{{t "min price"}}</label>
-            <span id="status-min-price"></span>
-          </div>
-          <div>
-            <div class="checkbox">
-              <label class="checkbox-inline">
-                <input id="check-show-grids" type="checkbox" checked data-toggle="toggle">
-                  {{t "reveal grids"}}
-              </label>
-            </div>
-            <div class="checkbox">
-              <label class="checkbox-inline">
-                <input id="check-show-mark" type="checkbox" checked data-toggle="toggle">
-                  {{t "reveal mark"}}
-              </label>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="panel panel-default panel-transparent">
-        <div class="panel-heading">
-          <span id="player-address">
-            {{t "finding..."}}
-          </span>
-          <div class="pull-right">
-            <a id="player-location" class="button button-tiny button-circle"><i class="fa fa-refresh"></i></a>
-          </div>
-          <!-- <span class="glyphicon glyphicon-screenshot pull-right clickable" id="player-location"></span> -->
-          <!-- <span class="glyphicon glyphicon-refresh pull-right clickable" id="player-refresh"></span> -->
-        </div>
-
-        <div class="panel-body">
-          <div id="player-avatar" class="avatar-upload">
-            <img>
-          </div>
-          <div>
-            <label>
-              {{t "earns"}}
-            </label>
-            <span id="player-earns"></span>
-            <div class="pull-right">
-              <a id="player-claim" href="#" class="button button-small button-glow button-highlight">{{t "claim"}}</a>
-            </div>
-            <!--
-            <button id="player-claim" class="btn btn-primary">
-              {{t "claim"}}
-            </button>
-            -->
-          </div>
-
-          <div>
-            <label>
-              {{t "owned grids"}}
-            </label>
-            <span id="player-grids-count"></span>
-            <select id="player-grids-list" class="form-control"xs></select>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- galaxy container -->
+    {{> statusSidebar}}
     <div id="galaxy" class="col-md-7"></div>
-    <!-- end galaxy container -->
-
-    <div id="control-panel" class="col-md-3">
-      <div class="panel panel-default panel-transparent">
-        <div class="panel-heading">
-          {{t "grid panel"}}
-          <span id="mouse-grid"></span>
-        </div>
-
-        <div class="panel-body">
-          <div class="row">
-          </div>
-          <div class="row">
-            <div class="col-xs-5">
-              <img id="grid-lord-avatar">
-
-              <div>
-                <span>
-                  {{t "grid owner"}}
-                </span>
-                
-                <span id="grid-owner"></span>
-              </div>
-            </div>
-            <div class="col-xs-7">
-              <div>
-                <label>
-                  {{t "longitude"}}
-                </label>
-                <span id="mouse-lon"></span>
-              </div>
-              <div>
-                <label>
-                  {{t "latitude"}}
-                </label>
-                <span id="mouse-lat"></span>
-              </div>
-              <div>
-                <label>
-                  {{t "grid status"}}
-                </label>
-                <span id="grid-status"></span>
-              </div>
-              <div>
-                <label>{{t "current price"}}</label>
-                <span id="oper-grid-price"></span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="panel panel-default panel-transparent">
-        <div class="panel-heading">
-          <!-- <label for="firstname" class="col-sm-4 control-label">{{t "operation board"}}</label> -->
-          <div class="col-sm-12 input-group">
-            <input type="number" class="form-control" placeholder='{{t "enter grid index"}}'
-              name="grid-idx">
-            <span id="search-grid" class="input-group-addon success">
-              <span class="glyphicon glyphicon-ok"></span>
-            </span>
-          </div>
-          <div class="input-group"></div>
-        </div>
-
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-xs-5">
-              <img id="selected-grid-avatar">
-            </div>
-            <div class="col-xs-7">              
-              <div>
-                <label>
-                  {{t "grid status"}}
-                </label>
-                <span id="selected-grid-status"></span>
-              </div>
-              <div>
-                <label>{{t "current price"}}</label>
-                <span id="selected-grid-price"></span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel-body">
-          <div>
-            <div id="buy-grid" class="form-group">
-              <button id="buy-grid-btn" class="btn btn-success col-xs-12">Buy this grid</button>
-            </div>
-
-            <div id="sell-grid" class="form-group">
-              <div class="input-group">
-                <!-- <span class="input-group-addon">{{t "sell grid"}}</span>-->
-                <input type="number" name="grid-sell-price" placeholder='{{t "enter sell price"}}' class="form-control">
-                <span id="sell-grid-btn" class="input-group-addon btn-primary">
-                  {{t "sell grid"}}
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="oper-grid" class="panel-body">
-          <div class="panel-body">
-            <div class="form-group">
-              <div id="grid-avatar" class="avatar-upload">
-                <img>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!--
-        <div class="panel-body">
-          <button class="btn btn-primary" id="sign">Sign Test</button>
-        </div>
-        -->
-      </div>
-    </div>
+    {{> gridSidebar}}
   </div>
 </div>
 
