init user starship
Change-Id: Iadd8d6d46a2aaf637f636938011deac9fc7dd2bb

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="/stylesheets/style.css">
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css"
   rel="stylesheet">
-  <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="/javascripts/avatar.css">
 
 <style>
@@ -47,6 +47,7 @@
 </script>
 
 <script src="/javascripts/avatar.js"></script>
+<script src="/javascripts/async.js"></script>
 <script type="text/javascript">
 </script>
 
