--- a/views/partials/gridSidebar.handlebars
+++ b/views/partials/gridSidebar.handlebars
@@ -9,18 +9,17 @@
       <div class="row">
       </div>
       <div class="row">
-        <div class="col-xs-7">
+        <div class="col-xs-5">
+          <div>
+             {{t "grid owner"}}
+          </div>
           <img id="grid-lord-avatar">
           <div>
-            <span>
-              {{t "grid owner"}}
-            </span>
-            
             <span id="grid-owner"></span>
           </div>
         </div>
 
-        <div class="col-xs-5">
+        <div class="col-xs-7">
           <div>
             <label>
               {{t "longitude"}}
@@ -77,23 +76,17 @@
             <label>{{t "current price"}}</label>
             <span id="selected-grid-price"></span>
           </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="panel-body">
-      <div>
-        <div id="buy-grid" class="form-group">
-          <button id="buy-grid-btn" class="btn btn-success col-xs-12">Buy this grid</button>
-        </div>
+          <div class="">
 
-        <div id="sell-grid" class="form-group">
-          <div class="input-group">
-            <!-- <span class="input-group-addon">{{t "sell grid"}}</span>-->
-            <input type="number" name="grid-sell-price" placeholder='{{t "enter sell price"}}' class="form-control">
-            <span id="sell-grid-btn" class="input-group-addon btn-primary">
-              {{t "sell grid"}}
-            </span>
+              <a id="buy-grid-btn" class="button button-small button-primary button-pill">{{t "BUY"}}</a>
+
+
+              <a id="sell-grid-btn" class="button button-small button-primary button-pill">{{t "SELL"}}</a>
+
+
+              <a class="button button-small button-primary button-pill">{{t "NEW PIC"}}</a>
+
           </div>
         </div>
       </div>
@@ -107,6 +100,15 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="panel panel-default panel-transparent">
+    <div class="panel-heading">
+      {{t "starship"}}
+    </div>
+    <div class="panel-body">
+
     </div>
   </div>
 </div>
