--- a/views/partials/statusSidebar.handlebars
+++ b/views/partials/statusSidebar.handlebars
@@ -55,7 +55,7 @@
         {{t "finding..."}}
       </span>
       <div class="pull-right">
-        <a id="player-location" class="button button-tiny button-circle"><i class="fa fa-refresh"></i></a>
+        <a id="player-refresh" class="button button-tiny button-circle"><i class="fa fa-refresh"></i></a>
       </div>
       <!-- <span class="glyphicon glyphicon-screenshot pull-right clickable" id="player-location"></span> -->
       <!-- <span class="glyphicon glyphicon-refresh pull-right clickable" id="player-refresh"></span> -->
