--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,6 +7,8 @@
   rel="stylesheet">
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="/javascripts/avatar.css">
+<link rel="stylesheet" href="/javascripts/vex/css/vex.css" />
+<link rel="stylesheet" href="/javascripts/vex/css/vex-theme-os.css" />
 
 <style>
   @import url(cesium/Widgets/widgets.css);
@@ -48,6 +50,9 @@
 
 <script src="/javascripts/avatar.js"></script>
 <script src="/javascripts/async.js"></script>
+<script src="/javascripts/vex/js/vex.combined.min.js"></script>
+<script>vex.defaultOptions.className = 'vex-theme-os'</script>
+
 <script type="text/javascript">
 </script>
 
