--- a/views/partials/gridSidebar.handlebars
+++ b/views/partials/gridSidebar.handlebars
@@ -10,9 +10,6 @@
       </div>
       <div class="row">
         <div class="col-xs-5">
-          <div>
-             {{t "grid owner"}}
-          </div>
           <img id="grid-lord-avatar">
           <div>
             <span id="grid-owner"></span>
@@ -77,16 +74,9 @@
             <span id="selected-grid-price"></span>
           </div>
 
-          <div class="">
-
+          <div class="row">
               <a id="buy-grid-btn" class="button button-small button-primary button-pill">{{t "BUY"}}</a>
-
-
               <a id="sell-grid-btn" class="button button-small button-primary button-pill">{{t "SELL"}}</a>
-
-
-              <a class="button button-small button-primary button-pill">{{t "NEW PIC"}}</a>
-
           </div>
         </div>
       </div>
