--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -57,8 +57,11 @@
 </script>
 
 <!-- distinguish test and pro env if cesium -->
-<!-- <script src="/cesium/Cesium.js"></script> -->
-<script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script>
+{{#if production}}
+  <script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script>
+{{else}}
+  <script src="/cesium/Cesium.js"></script>
+{{/if}}
 <!--<script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
 <!-- end distinguish test and pro env if cesium -->
 
