--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -7,7 +7,13 @@
       </a>
     </div>
     <div class="pull-right">
+
       <ul class="nav navbar-nav">
+        <li>
+          <a target="blank" href='/{{t "howtoplay"}}'>
+            {{t "How to play"}}
+          </a>  
+        </li>
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <span id="network"></span>
