--- a/views/partials/gridSidebar.handlebars
+++ b/views/partials/gridSidebar.handlebars
@@ -58,23 +58,24 @@
     </div>
 
     <div class="panel-body">
-      <div class="row">
-        <div class="col-xs-5">
-          <img id="selected-grid-avatar">
+      <div>
+        <div id="grid-avatar" class="row avatar-upload">
+          <img src="/images/logo.png">
         </div>
-        <div class="col-xs-7">              
-          <div>
-            <label>
-              {{t "grid status"}}
-            </label>
-            <span id="selected-grid-status"></span>
+        <div class="row">
+          <div class="col-xs-6">              
+            <div>
+              <label>
+                {{t "grid status"}}
+              </label>
+              <span id="selected-grid-status"></span>
+            </div>
+            <div>
+              <label>{{t "current price"}}</label>
+              <span id="selected-grid-price"></span>
+            </div>
           </div>
-          <div>
-            <label>{{t "current price"}}</label>
-            <span id="selected-grid-price"></span>
-          </div>
-
-          <div class="row">
+          <div class="col-xs-6">
               <a id="buy-grid-btn" class="button button-small button-primary button-pill">{{t "BUY"}}</a>
               <a id="sell-grid-btn" class="button button-small button-primary button-pill">{{t "SELL"}}</a>
           </div>
@@ -82,15 +83,7 @@
       </div>
     </div>
 
-    <div id="oper-grid" class="panel-body">
-      <div class="panel-body">
-        <div class="form-group">
-          <div id="grid-avatar" class="avatar-upload">
-            <img>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 
   <div class="panel panel-default panel-transparent">
