fix local grid display

--- a/views/partials/gridSidebar.handlebars
+++ b/views/partials/gridSidebar.handlebars
@@ -60,7 +60,7 @@
     <div class="panel-body">
       <div>
         <div id="grid-avatar" class="row avatar-upload">
-          <img src="/images/logo.png">
+          <img id="grid-avatar-img">
         </div>
         <div class="row">
           <div class="col-xs-6">              
