--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -54,12 +54,12 @@
 <script>vex.defaultOptions.className = 'vex-theme-os'</script>
 
 <script type="text/javascript">
-</script>ß
+</script>
 
 <!-- distinguish test and pro env if cesium -->
-<!-- <script src="/cesium/Cesium.js"></script> -->
+<script src="/cesium/Cesium.js"></script>
 <!-- <script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script>
+<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
 <!-- end distinguish test and pro env if cesium -->
 
 <script src="javascripts/validation.js"></script>
