Add remove image function

--- a/views/partials/gridSidebar.handlebars
+++ b/views/partials/gridSidebar.handlebars
@@ -77,8 +77,14 @@
             </div>
           </div>
           <div class="col-xs-6">
+            <div class="row">
+              <a id="del-grid-img-btn" class="btn btn-info btn-sm" style="display:none">{{t "DEL LOGO"}}</a>
+            </div>
+            <br />
+            <div class="row">
               <a id="buy-grid-btn" class="button button-small button-primary button-pill" style="display:none">{{t "BUY"}}</a>
               <a id="sell-grid-btn" class="button button-small button-primary button-pill" style="display:none">{{t "SELL"}}</a>
+            </div>
           </div>
         </div>
       </div>
