--- a/views/partials/gridSidebar.handlebars
+++ b/views/partials/gridSidebar.handlebars
@@ -62,31 +62,24 @@
         <div id="grid-avatar" class="row avatar-upload" style="display:none">
           <img id="grid-avatar-img">
         </div>
-        <br />
-        <div class="row">
-          <div class="col-xs-6">              
-            <div>
+        <div class="row">              
+            <div class="col-md-6">
               <label>
                 {{t "grid status"}}
               </label>
               <span id="selected-grid-status"></span>
             </div>
-            <div>
+            <div class="col-md-6">
               <label>{{t "current price"}}</label>
               <span id="selected-grid-price"></span>
             </div>
           </div>
-          <div class="col-xs-6">
-            <div class="row">
-              <a id="del-grid-img-btn" class="btn btn-info btn-sm" style="display:none">{{t "DEL LOGO"}}</a>
-            </div>
-            <br />
-            <div class="row">
-              <a id="buy-grid-btn" class="button button-small button-primary button-pill" style="display:none">{{t "BUY"}}</a>
-              <a id="sell-grid-btn" class="button button-small button-primary button-pill" style="display:none">{{t "SELL"}}</a>
-            </div>
+          <div>
+              <a id="del-grid-img-btn" class="button button-small button-primary button-pill">{{t "DELETE"}}</a>
+              <a id="buy-grid-btn" class="button button-small button-primary button-pill">{{t "BUY"}}</a>
+              <a id="sell-grid-btn" class="button button-small button-primary button-pill">{{t "SELL"}}</a>
           </div>
-        </div>
+
       </div>
     </div>
 
