--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -65,6 +65,7 @@
 {{/if}}
 <!-- end distinguish test and pro env if cesium -->
 
+<script src="javascripts/consts.js"></script>
 <script src="javascripts/validation.js"></script>
 <script src="javascripts/stars.js"></script>
 <script src="javascripts/Earth.js"></script>
