--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -66,11 +66,14 @@
 <!-- end distinguish test and pro env if cesium -->
 
 <script src="javascripts/consts.js"></script>
+<script src="javascripts/utils.js"></script>
 <script src="javascripts/validation.js"></script>
 <script src="javascripts/stars.js"></script>
 <script src="javascripts/Earth.js"></script>
 <script src="javascripts/contract.js"></script>
 <script src="javascripts/grids.js"></script>
+<script src="javascripts/event.js"></script>
+<script src="javascripts/galaxy.js"></script>
 <script src="javascripts/AppSkeleton.js"></script>
 <script>
   ((window.gitter = {}).chat = {}).options = {
