use mongodb to store configuraiton
Change-Id: Ic3b698d1a071127d1bac25c8e1f4d9a5beb565b3

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -68,6 +68,7 @@
 <script src="javascripts/stars.js"></script>
 <script src="javascripts/Earth.js"></script>
 <script src="javascripts/contract.js"></script>
+<script src="javascripts/configuration.js"></script>
 <script src="javascripts/grids.js"></script>
 <script src="javascripts/event.js"></script>
 <script src="javascripts/galaxy.js"></script>
