--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="/javascripts/vex/css/vex-theme-os.css" />
 
 <style>
-  @import url(cesium/Widgets/widgets.css);
+  @import url(https://cesiumjs.org/releases/1.40/Build/Cesium/Widgets/widgets.css);
   #galaxy {
     height: 600px;
   }
@@ -59,7 +59,8 @@
 <!-- distinguish test and pro env if cesium -->
 
   <!-- <script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
-  <script src="/cesium/Cesium.js"></script>
+<!-- <script src="/cesium/Cesium.js"></script> -->
+  <script src="https://cesiumjs.org/releases/1.40/Build/Cesium/Cesium.js"></script>
 <!-- end distinguish test and pro env if cesium -->
 
 <script src="javascripts/consts.js"></script>
