--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -44,7 +44,7 @@
 <!-- end import jquery & bootstrap -->
 
 <script type="text/javascript">
-  window.CESIUM_BASE_URL = '/cesium';
+  //window.CESIUM_BASE_URL = '/cesium';
   window.LOCALE = '{{ l }}' || 'cn';
 </script>
 
