--- a/views/partials/gridSidebar.handlebars
+++ b/views/partials/gridSidebar.handlebars
@@ -67,6 +67,10 @@
         <div id="grid-avatar" class="row avatar-upload" style="display:none">
           <img id="grid-avatar-img">
         </div>
+        <br/>
+        <div>
+          <input type="url" id="set-grid-link" class="form-control" placeholder='{{t "you may provide a link here"}}' style="display: none">
+        </div>
         <div class="row">              
             <div class="col-md-6">
               <label>
