--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,8 +10,10 @@
 <link rel="stylesheet" href="/javascripts/vex/css/vex.css" />
 <link rel="stylesheet" href="/javascripts/vex/css/vex-theme-os.css" />
 
+<!-->  @import url(https://cesiumjs.org/releases/1.40/Build/Cesium/Widgets/widgets.css); -->
 <style>
-  @import url(https://cesiumjs.org/releases/1.40/Build/Cesium/Widgets/widgets.css);
+  @import url(/cesium/Widgets/widgets.css);
+
   #galaxy {
     height: 600px;
   }
@@ -59,8 +61,8 @@
 <!-- distinguish test and pro env if cesium -->
 
   <!-- <script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
-<!-- <script src="/cesium/Cesium.js"></script> -->
-<script src="https://cesiumjs.org/releases/1.40/Build/Cesium/Cesium.js"></script>
+<script src="/cesium/Cesium.js"></script>
+<!-- <script src="https://cesiumjs.org/releases/1.40/Build/Cesium/Cesium.js"></script> -->
 <!-- end distinguish test and pro env if cesium -->
 
 <script src="javascripts/consts.js"></script>
