--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/javascripts/vex/css/vex.css" />
 <link rel="stylesheet" href="/javascripts/vex/css/vex-theme-os.css" />
 
-<!-->  @import url(https://cesiumjs.org/releases/1.40/Build/Cesium/Widgets/widgets.css); -->
+<!-- @import url(https://cesiumjs.org/releases/1.40/Build/Cesium/Widgets/widgets.css); -->
 <style>
   @import url(/cesium/Widgets/widgets.css);
 
