--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -46,7 +46,7 @@
 <!-- end import jquery & bootstrap -->
 
 <script type="text/javascript">
-  //window.CESIUM_BASE_URL = '/cesium';
+  window.CESIUM_BASE_URL = '/cesium';
   window.LOCALE = '{{ l }}' || 'cn';
 </script>
 
@@ -61,7 +61,9 @@
 <!-- distinguish test and pro env if cesium -->
 
   <!-- <script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
-<script src="/cesium/Cesium.js"></script>
+<!-- <script src="/cesium/Cesium.js"></script> -->
+<!-- <script src="https://cdn.bootcss.com/webpack-cesium/1.37.0/webpack.cesium.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/webpack-cesium/1.37.0/webpack.cesium.js"></script>
 <!-- <script src="https://cesiumjs.org/releases/1.40/Build/Cesium/Cesium.js"></script> -->
 <!-- end distinguish test and pro env if cesium -->
 
@@ -81,4 +83,5 @@
     room: 'EEGalaxy/Lobby'
   };
 </script>
-<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+<!-- <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.3.2/sidecar.js"></script>
