load more from cdn
Change-Id: I6dda8a7af6b863f35acbfd70d81dbee984f0ff6a

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,8 +7,9 @@
   rel="stylesheet">
 <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="/javascripts/avatar.css">
-<link rel="stylesheet" href="/javascripts/vex/css/vex.css" />
-<link rel="stylesheet" href="/javascripts/vex/css/vex-theme-os.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vex-js/4.0.1/css/vex.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vex-js/4.0.1/css/vex-theme-os.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-notify/0.2.0/css/bootstrap-notify.min.css" />
 
 <!-- @import url(https://cesiumjs.org/releases/1.40/Build/Cesium/Widgets/widgets.css); -->
 <style>
@@ -42,7 +43,7 @@
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
   crossorigin="anonymous"></script>
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-<script src="/bower/remarkable-bootstrap-notify/bootstrap-notify.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-notify/0.2.0/js/bootstrap-notify.min.js"></script>
 <!-- end import jquery & bootstrap -->
 
 <script type="text/javascript">
@@ -51,8 +52,8 @@
 </script>
 
 <script src="/javascripts/avatar.js"></script>
-<script src="/javascripts/async.js"></script>
-<script src="/javascripts/vex/js/vex.combined.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/async/2.6.0/async.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vex-js/4.0.1/js/vex.combined.min.js"></script>
 <script>vex.defaultOptions.className = 'vex-theme-os'</script>
 
 <script type="text/javascript">
