--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -43,7 +43,8 @@
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
   crossorigin="anonymous"></script>
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-notify/0.2.0/js/bootstrap-notify.min.js"></script>
+<script src="/bower/remarkable-bootstrap-notify/bootstrap-notify.min.js"></script>
+
 <!-- end import jquery & bootstrap -->
 
 <script type="text/javascript">
