help get eth in testnet
Change-Id: I4b1e5be047a8632e24143f0f024fa89df37ca3e7

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -21,6 +21,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a id="contract" target="_blank" href="#">{{t "contract"}}</a></li>
+            <li><a href="https://faucet.metamask.io/">{{t "want ETH in testnet?"}}</a></li>
           </ul>
         </li>
 
